--- a/整改工具/ui/templates/issue/add.html
+++ b/整改工具/ui/templates/issue/add.html
@@ -33,7 +33,7 @@
         <br/>
         <div class=".issue-depts">
             责任部门：<br>
-            <i-Select v-model="depts" multiple filterable  style="width:80%">
+            <i-Select v-model="depts" multiple filterable  style="width:60%">
                 <i-Option v-for="item in depts_bm" :value="item" :key="item">[[ item ]]</i-Option>
                 <i-Option value="-" disabled><hr/></i-Option>
                 <i-Option v-for="item in depts_xz" :value="item" :key="item">[[item ]]</i-Option>
@@ -41,6 +41,7 @@
             <i-button @click="selectDepts_0"> 全选 </i-button>
             <i-button @click="selectDepts_1"> 县直部门 </i-button>
             <i-button @click="selectDepts_2"> 乡镇 </i-button>
+            <i-button @click="selectDepts_4"> 行政执法部门 </i-button>
             <i-button @click="selectDepts_3"> 清除 </i-button>
         </div>
         <br/>
@@ -65,6 +66,7 @@
 
             depts_bm: {{g.depts_bm | tojson}},
             depts_xz: {{g.depts_xz | tojson}},
+            depts_xzzf: {{ g.depts_xzzf | tojson}},
         },
         delimiters: ["[[","]]"],    //用于避免与flask冲突
         mounted: function() {
@@ -87,6 +89,10 @@
             },
             selectDepts_3: function() {
                 this.depts.splice(0, this.depts.length);
+            },
+            selectDepts_4: function() {
+                this.depts.splice(0, this.depts.length);
+                 for (i in this.depts_xzzf) this.depts.push(this.depts_xzzf[i]);
             },
             save: function() {
                 var vm = this;
