--- a/vue/js/ui.css
+++ b/vue/js/ui.css
@@ -36,10 +36,32 @@ table.basic-table a {
     text-decoration-line: none; 
 }
 
+table.stock-table {
+    font-size: 14px;
+}
+table.stock-table th {
+    font-size: 12px;
+}
 table.stock-table .ths-zt-reason {
     color: #5CACEE;
     font-size: 12px;
 }
 table.stock-table .zt-reason {
     color: #66B2FF;
+}
+
+.popup-window {
+    z-index: 8000;
+    position: fixed;
+    padding: 0;
+    outline: 0;
+    left:0px;
+    top: 0px;
+    width:100%;
+    height:100%;
+    background-color: rgba(92, 58, 58, 0.3);
+}
+.popup-window .content {
+    position: absolute;
+    border: 1px solid #666;
 }
